--- a/weggsAPI-main/.env
+++ b/weggsAPI-main/.env
@@ -1,5 +1,5 @@
 PORT=4000
-DB_URL="mongodb+srv://kuldeep:12345@cluster0.g3fzb.mongodb.net/digibrosi?retryWrites=true&w=majority"
+DB_URL="mongodb+srv://kuldeep:12345@cluster0.g3fzb.mongodb.net/digibros?retryWrites=true&w=majority"
 
 SECRET_KEY=passwordsecret
 
