--- a/weggsAPI-main/package.json
+++ b/weggsAPI-main/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
   "author": "Rohit",
   "license": "ISC",
@@ -16,13 +16,14 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "express-fileupload": "^1.3.1",
     "firebase": "^8.7.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.8",
     "nodemon": "^2.0.15",
     "otp-generator": "^4.0.0",
+    "razorpay": "^2.8.0",
+    "sendotp": "^1.2.9",
     "validator": "^13.7.0"
   }
 }
