--- a/weggsAPI-main/package.json
+++ b/weggsAPI-main/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "firebase": "^8.7.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
